<!--
  ~     GameHunter is an Android app for searching video games
  ~     Copyright (C) 2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name">Game Hunter</string>

    <string name="activity_site_chooser_instruction">Click one of the thumbnails to immediately search through their database.</string>
    <string name="adapter_site_chooser_item_view_logo_content_description">Website</string>

    <string name="activity_searcher_search">Search</string>
    <string name="activity_searcher_options">Options</string>
    <string name="activity_searcher_searchbox_label">Search</string>
    <string name="activity_searcher_page_status_default">0 / 0</string>
    <string name="activity_searcher_gotopage_dialog_message">Go to Page:</string>

    <!-- Searcher content descriptions -->
    <string name="activtiy_searhcer_close_content_description">Close search box</string>
    <string name="activity_searcher_results_item_image_content_description">Game thumbnail
        image</string>
    <string name="activity_searcher_first_page_content_description">Go to first page</string>
    <string name="activity_searcher_previous_content_description">Go to previous page</string>
    <string name="activity_searcher_next_content_description">Go to next page</string>
    <string name="activity_searcher_last_page_content_description">Go to last page</string>

    <!-- Labels for search page options-->
    <string name="activity_searcher_options_search">Search</string>
    <string name="activity_searcher_options_platform">Filter by name</string>
    <string name="activity_searcher_options_theme">Filter by theme</string>
    <string name="activity_searcher_options_genre">Filter by genre</string>
    <string name="activity_searcher_options_releaseyear">Release year</string>
    <string name="activity_searcher_options_yeartoyear">"   to   "</string>
    <string name="activity_searcher_options_sort">Sort by</string>
    <string name="activity_searcher_options_order">Order by</string>
    <string name="activity_searcher_options_apply">Apply</string>

    <string name="activity_searcher_options_platform_content_description">Platform
        filters dropdown</string>
    <string name="activity_searcher_options_theme_content_description">Theme filters
        dropdown</string>
    <string name="activity_searcher_options_genre_content_description">Genre filters
        dropdown</string>
    <string name="activity_searcher_options_sort_content_descriptions">Sort dropdown</string>
    <string name="activity_searcher_options_order_content_description">Order dropdown</string>

    <!-- Searcher Game Details strings -->
    <string name="activity_game_details_main_image_content_description">Main Image</string>
    <string name="activity_game_details_plot_header_text">Plot</string>
    <string name="activity_game_details_characters_header_text">Characters</string>
    <string name="activity_game_details_gameplay_header_text">Gameplay</string>
    <string name="activity_game_details_reception_header_text">Reception</string>
    <string name="activity_game_details_release_date_header_text">Release Date</string>
    <string name="activity_game_details_developers_header_text">Developers</string>
    <string name="activity_game_details_publishers_header_text">Publishers</string>
    <string name="activity_game_details_platforms_header_text">Platforms</string>
    <string name="activity_game_details_genres_header_text">Genres</string>
    <string name="activity_game_details_themes_header_text">Themes</string>
    <string name="activity_game_details_singleplayer_multiplayer_header_text">Singleplayer/Multiplayer</string>
    <string name="activity_game_details_ratings_header_text">Ratings</string>
    <string name="activity_game_details_website_header_text">Website</string>
    <string name="activity_game_details_license_header_text">Llcense</string>
</resources>
