<?xml version="1.0" encoding="utf-8"?><!--
  ~     GameHunter is an Android app for searching video games
  ~     Copyright (C) 2018 Loremar Marabillas
  ~        
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:fitsSystemWindows="true"
    android:theme="@style/SearchOptionsTheme">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/searchOptionsBackground"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_searcher_options_paddingleft"
        android:paddingTop="@dimen/activity_searcher_options_paddingtop"
        android:paddingRight="@dimen/activity_searcher_options_paddingright"
        android:paddingBottom="@dimen/activity_searcher_options_paddingbottom">


        <TextView
            android:id="@+id/activity_searcher_options_search_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_search" />

        <EditText
            android:id="@+id/activity_searcher_options_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/activity_searcher_options_platform_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_platform" />

        <AutoCompleteTextView
            android:id="@+id/activity_searcher_options_platform_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activity_searcher_options_theme_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_theme" />

        <AutoCompleteTextView
            android:id="@+id/activity_searcher_options_theme_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activity_searcher_options_genre_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_genre" />

        <AutoCompleteTextView
            android:id="@+id/activity_searcher_options_genre_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activity_searcher_options_yearrelease_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_releaseyear" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/activity_searcher_options_fromyear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/activity_searcher_options_yeartoyear" />

            <NumberPicker
                android:id="@+id/activity_searcher_options_toyear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_searcher_options_sort_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_sort" />

        <Spinner
            android:id="@+id/activity_searcher_options_sort_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activity_searcher_options_order_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_order" />

        <Spinner
            android:id="@+id/activity_searcher_options_order_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/activity_searcher_options_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_searcher_options_apply" />

    </LinearLayout>

</ScrollView>